Corrected the alignments and fixed things of the website according to the debugging suggestion of chat gpt which was only used after i finished everything and just to see if i had anything that was bothering to pro devs

--- a/style.css
+++ b/style.css
@@ -13,12 +13,7 @@ body{
     font-family: roboto, sans-serif;
 }
 
-.right-signup,
-.footer,
-.signup,
-.main-header,
-.hero,
-.right-hero button{
+.main-clr{
     color: #f9faf8;
 }
 
@@ -47,14 +42,15 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 400px;
+    padding: 100px 0;
 }
 
 .img-placeholder{
     display: flex;
     background-color: #ffffff50;
     height: 300px;
-    width: 650px;
+    max-width: 650px;
+    width: 100%;
     justify-content: center;
     align-items: center;
     font-size: 24px;
@@ -63,13 +59,14 @@ body{
 .right-hero{
     display: flex;
     flex-direction: column;
-    width: 500px;
-    height: 300px;
+    max-width: 500px;
+    width: 100%;
+    padding: 32px 0;
     line-height: 1.6;
     gap: 16px;
 }
 
-#hero{
+.hero-txt{
     font-size: 48px;
     font-weight: 1000;
     line-height: 1.1;
@@ -95,8 +92,6 @@ body{
 .content{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     padding: 80px 0;
 }
 
@@ -104,19 +99,21 @@ body{
     display: flex;
     gap: 64px;
     margin: 32px;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
 .grid-box{
-    width: 200px;
-    height: 200px;
+    max-width: 200px;
+    width: 100%;
+    min-height: 200px;
     border: 5px solid rgb(75, 113, 219);
     border-radius: 16px;
 }
 
 .grid-text{
-    width: 200px;
+    max-width: 200px;
+    width: 100%;
     line-height: 1.4;
     text-align: center;
 
@@ -126,6 +123,8 @@ body{
     font-size: 36px;
     color: #1f2937;
     font-weight: 900;
+    display: flex;
+    justify-content: center;
 }
 
 .quote-box{
@@ -133,6 +132,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 100vw;
     width: 100%;
     min-height: 400px;
     background-color: #e5e7eb;
@@ -161,8 +161,14 @@ body{
     font-size: 24px;
 }
 
+.signup-container{
+    display: flex;
+    justify-content: center;
+}
+
 .signup-box{
-    width: 60%;
+    max-width: 60vw;
+    width: 100%;
     height: 150px;
     display: flex;
     justify-content: space-evenly;
@@ -185,8 +191,8 @@ body{
     background-color: #3882f6;
     border: none;
     outline: 2px solid white;
-    width: 10%;
-    min-height: 20%;
+    width: 128px;
+    min-height: 48px;
     border-radius: 5px;
     cursor: pointer;
 }
